--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>Minha página</title> <!-- Título da Página do navegador -->
+        <title>10</title> <!-- Título da Página do navegador -->
     </head>
 
     <body>
         <nav><!-- Menu de navegação -->
+
+            <p>Minha página</p>
+
             <ul><!-- Lista desordenada, sem numeração -->
                 <li>SERVIÇOS</li> <!-- Lista de um elemento HTML -->
                 <li>CLIENTES</li>
@@ -18,13 +21,29 @@
         </nav>
 
         <header><!--Cabecalho  -->
-                <h1>Minha página</h1><!--Tamanho da fonte  -->
+                <h1>My page</h1><!--Tamanho da fonte  -->
                 
                 <p><!-- Páragrafo -->
                     Oferecemos o desenvolvimento dos melhores sites e app do mercado!        
                 </p>
         </header>
             
+        <section id="servicos">
+            <h2>SERVIÇOS</h2>
+            <p>Oferecemos o desenvolvimento dos melhores
+                sites e app do mercado!        
+            </p>
+            <img src="img/person-using-silver-macbook-pro-1181467.jpg" width="300"> 
+        </section>
+
+        <Section id="clientes">
+            <h2>CLIENTES</h2>
+            <p>Nossos clientes ficaram muitíssimos satisfeitos
+                com nossos serviços!
+            </p>
+            <img src="img/sozinho-solitario-barra-bar-4350297.jpg" width="300">
+        </Section>
+
         <footer><!-- Rodape -->
             <p>Desenvolvido por Jean Rocha</p>
         </footer>      
