--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
             <p>Minha página</p>
 
             <ul><!-- Lista desordenada, sem numeração -->
-                <li>SERVIÇOS</li> <!-- Lista de um elemento HTML -->
-                <li>CLIENTES</li>
-                <li>PARCEIROS</li>
-                <li>TIME</li>
-                <li>CONTATO</li>
+                <li>
+                    <a href="#servicos">SERVIÇOS</a>
+                </li> <!-- Lista de um elemento HTML -->
+                <li>
+                    <a href="#clientes">CLIENTES</a>
+                </li>
+                <li>
+                    <a href="#parceiros">PARCEIROS</a>
+                </li>
+                <li>
+                    <a href="#time">TIME</a>
+                </li>
+                <li>
+                    <a href="#contato">CONTATO</a>
+                </li>
             </ul>
         </nav>
 
@@ -33,7 +43,7 @@
             <p>Oferecemos o desenvolvimento dos melhores
                 sites e app do mercado!        
             </p>
-            <img src="img/person-using-silver-macbook-pro-1181467.jpg" width="300"> 
+            <img src="img/person-using-silver-macbook-pro-1181467.jpg" width="300px"> 
         </section>
 
         <Section id="clientes">
@@ -41,8 +51,44 @@
             <p>Nossos clientes ficaram muitíssimos satisfeitos
                 com nossos serviços!
             </p>
-            <img src="img/sozinho-solitario-barra-bar-4350297.jpg" width="300">
+            <img src="img/sozinho-solitario-barra-bar-4350297.jpg" width="250px">
         </Section>
+
+        <section id="parceiros">
+            <h2>PARCEIROS</h2>
+            <p>
+                Nossos parceiros nos ajudam a entregar as melhores
+                soluções para os nossos clientes!
+            </p>
+            <div>
+                <img src="img/photo-of-people-near-wooden-table-3184418.jpg" width="150px">
+            </div>
+        </section>
+
+        <section id="time">
+            <h2>TIME</h2>
+            <p>
+                Nosso time trabalha com muita qualidade e empenho para entregar 
+                o melhor produto para nossos clientes.
+            </p>
+            <div>
+                <img src="img/group-of-people-watching-on-laptop-1595385.jpg" width="200px">
+            </div>
+        </section>
+
+        <section id="contato">
+                <h2>CONTATO</h2>
+                <p>
+                    Entre em contato com nossa equipe.
+                </p>
+                <div>
+                    <img src="img/coffee-contact-email-hands-4831.jpg" width="200px">
+                    <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
+                    <p><a href="tel:9999999999">(99) 9999-9999</a></p>
+                </div>
+                
+            </section>
+
 
         <footer><!-- Rodape -->
             <p>Desenvolvido por Jean Rocha</p>
