add css with HTML5

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>10</title> <!-- Título da Página do navegador -->
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
@@ -43,7 +44,7 @@
             <p>Oferecemos o desenvolvimento dos melhores
                 sites e app do mercado!        
             </p>
-            <img src="img/person-using-silver-macbook-pro-1181467.jpg" width="300px"> 
+            <img src="img/person-using-silver-macbook-pro-1181467.jpg" class="img_padrao"> 
         </section>
 
         <Section id="clientes">
